--- a/workflows/send-email.yml
+++ b/workflows/send-email.yml
@@ -1,6 +1,9 @@
 name: Send Email
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   send_email:
@@ -8,14 +11,17 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.11.8'
+          python-version: '3.11.8'  
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
       - name: Send email
         env:
           GMAIL_PASSWORD: ${{ secrets.GMAIL_PASSWORD }}
