--- a/.github/workflows/send-email.yml
+++ b/.github/workflows/send-email.yml
@@ -10,8 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-
+        uses: actions/checkout@v3  # Updated to use latest version (v3) of actions/checkout
+        with:
+          ref: ${{ github.ref }}
+          
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
