--- a/.github/workflows/send-email.yml
+++ b/.github/workflows/send-email.yml
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4  # Updated to use latest version (v3) of actions/checkout
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.ref }}
           
       - name: Set up Python
-        uses: actions/checkout@v4
+        uses: actions/setup-python@v2
         with:
           python-version: '3.11.8'  
 
